compiler-core/src/parse/snapshots/gleam_core__parse__tests__incomplete_suffix_match_in_concat_pattern.snap
---
source: compiler-core/src/parse/tests.rs
expression: "case \"\" {\n    \"prefix\" <> wibble <> -> wibble\n}"
---
----- SOURCE CODE
case "" {
    "prefix" <> wibble <> -> wibble
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:24
  │
2 │     "prefix" <> wibble <> -> wibble
  │                        ^^ This pattern is not allowed

A string pattern can only match on a literal string prefix.

Matching on a literal suffix is not possible, because `wibble` would have an unknown size.
